#163 Added support for generating the invoice from the booking operations page

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
@@ -27,3 +27,15 @@
         </div>
     </div>
 </div>
+
+<div class="col-xs-12 col-sm-12" *ngIf="!hasInvoice">
+    <div class="row">
+        <div class="col-xs-12 padding-top-5px">
+            <button type="button" class="btn btn-danger btn-block oneline-text" (click)="generateInvoice()">
+				<i *ngIf="isSaving" class="fa fa-spinner fa-pulse"></i> 
+                <i *ngIf="!isSaving" class="fa unitpal-font">L</i> 
+                {{ 'Generate Invoice' | translate }}
+			</button>
+        </div>
+    </div>
+</div>
