--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -84,7 +84,7 @@
 			<booking-undo-checkin [bookingOperationsPageData]="bookingOperationsPageData" (onBookingUndoCheckIn)="didChangeBooking($event) && loadPageData()"></booking-undo-checkin>
 		</div>
 		<div class="row padding-bottom-10px">
-			<booking-links [bookingOperationsPageData]="bookingOperationsPageData"></booking-links>
+			<booking-links [bookingOperationsPageData]="bookingOperationsPageData" (onInvoiceGenerated)="loadPageData()"></booking-links>
 		</div>
 	</div>
 </div>
