#163 Show the generate invoice button only when the right exists

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/booking-links/template/booking-links.html
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-<div class="col-xs-12 col-sm-12" *ngIf="!hasInvoice">
+<div class="col-xs-12 col-sm-12" *ngIf="hasGenerateInvoiceRight && !hasInvoice">
     <div class="row">
         <div class="col-xs-12 padding-top-5px">
             <button type="button" class="btn btn-danger btn-block oneline-text" (click)="generateInvoice()">
