--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -71,12 +71,12 @@
                     </td>
                     <td width="40%">
                         <span *ngIf="!invoiceItemVM.displayBookingDateBreakdown()">
-                            <i *ngIf="!invoiceItemVM.isMovable()" class="unitpal-font">%</i> {{ invoiceItemVM.itemDisplayText | translate }}
+                            <i *ngIf="invoiceItemVM.invoiceItemDO.meta.isDerivedFromBooking()" class="unitpal-font">%</i> {{ invoiceItemVM.itemDisplayText | translate }}
                         </span>
                         
                         <!-- Booking price -->
                         <span *ngIf="invoiceItemVM.displayBookingDateBreakdown()">
-                            <span *ngFor="let roomPricePerNight of invoiceItemVM.invoiceItemDO.meta.roomPricePerNightList"
+                            <span *ngFor="let roomPricePerNight of invoiceItemVM.invoiceItemDO.meta.getInvoicedRoomPricePerNightList(invoiceItemVM.invoiceItemDO.accountingType)"
                                 title="{{ invoiceItemVM.itemDisplayText }}">
                                 <i class="unitpal-font">%</i>
                                 {{ 'Accomodation for' | translate }} {{ roomPricePerNight.thDate | thdate }}
@@ -91,8 +91,8 @@
                         </span>
                         <!-- Booking price -->
                         <span *ngIf="invoiceItemVM.displayBookingDateBreakdown()">
-                            <p *ngFor="let roomPricePerNight of invoiceItemVM.invoiceItemDO.meta.roomPricePerNightList" class="invoice-item-small">
-                                1
+                            <p *ngFor="let roomPricePerNight of invoiceItemVM.invoiceItemDO.meta.getInvoicedRoomPricePerNightList(invoiceItemVM.invoiceItemDO.accountingType)" class="invoice-item-small">
+                                {{ (invoiceItemVM.invoiceItemDO.isOfTypeCredit())? -1 : 1 }}
                             </p>
                         </span>
                         <!-- END Booking price -->
@@ -117,7 +117,7 @@
                         
                         <!-- Booking price -->
                         <span *ngIf="invoiceItemVM.displayBookingDateBreakdown()">
-                            <p *ngFor="let roomPricePerNight of invoiceItemVM.invoiceItemDO.meta.roomPricePerNightList" class="invoice-item-small">
+                            <p *ngFor="let roomPricePerNight of invoiceItemVM.invoiceItemDO.meta.getInvoicedRoomPricePerNightList(invoiceItemVM.invoiceItemDO.accountingType)" class="invoice-item-small">
                                 {{ ccySymbol }} <b>{{ roomPricePerNight.price | price }}</b>
                             </p>
                         </span>
