--- a/ansible/roles/unitpal/templates/azure.js.j2
+++ b/ansible/roles/unitpal/templates/azure.js.j2
@@ -14,6 +14,7 @@ module.exports = {
 		connection: 'mongodbazure'
 	},
 	hookTimeout: 40000,
+	bootstrapTimeout: 400000,
 	log: {
 		level: "silent"
 	},
