#346 Bootstrapped reinstate action on the client

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -141,8 +141,13 @@
 
     <div *ngIf="!editMode" class="invoice-edit-footer">
         
-        <button type="button" class="btn btn-danger" *ngIf="isPaid && !isCredited && !isCredit" (click)="onCreditInvoice()">
+        <!--<button type="button" class="btn btn-danger" *ngIf="isPaid && !isCredited && !isCredit" (click)="onCreditInvoice()">
             <i class="fa fa-2x unitpal-font">+</i> {{ 'Credit Invoice' | translate }}
+        </button>
+        -->
+
+        <button type="button" class="btn btn-danger" *ngIf="isPaid && !isCredited && !isCredit" (click)="onReinstateInvoice()">
+            <i class="fa fa-2x unitpal-font">+</i> {{ 'Reinstate Invoice' | translate }}
         </button>
 
         <button type="button" class="btn btn-primary" *ngIf="!isPaid" (click)="onPayInvoice()">
