#241 Display the first individual and the possible TA/Company on arrivals and departures

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/arrivals-pane/components/arrival-item/template/arrival-item.html
@@ -9,6 +9,9 @@
 			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ arrivalItemVM.arrivalItemDO.bookingNotes }}" (click)="openBookingNotesModal()" class="clickable booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
 		</div>
 		<div class="body">
+			<span class="f-12">{{ 'Agency' | translate }}:</span>
+			<span *ngIf="arrivalItemVM.corporateCustomerName && arrivalItemVM.corporateCustomerName.length > 0" class="corporate-customer-name ellipsis-text clickable" (click)="openCorporateCustomerModal()" title="{{arrivalItemVM.corporateCustomerName}}">{{arrivalItemVM.corporateCustomerName}}</span>
+			<span *ngIf="!arrivalItemVM.corporateCustomerName || arrivalItemVM.corporateCustomerName.length <= 0" class="corporate-customer-name">{{ 'N/A' | translate }}</span>
 			<div class="room-type ellipsis-text " title="{{arrivalItemVM.roomCategoryLabel}}">{{arrivalItemVM.roomCategoryLabel}}</div>
 			<div class="booking-quick-details">
 				<div class="period clickable" (click)="openBookingModal()" >
@@ -41,6 +44,9 @@
 			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ arrivalItemVM.arrivalItemDO.bookingNotes }}" (click)="openBookingNotesModal()" class="clickable booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
 		</div>
 		<div class="body">
+			<span class="f-12">{{ 'Agency' | translate }}:</span>
+			<span *ngIf="arrivalItemVM.corporateCustomerName && arrivalItemVM.corporateCustomerName.length > 0" class="corporate-customer-name ellipsis-text clickable" (click)="openCorporateCustomerModal()" title="{{arrivalItemVM.corporateCustomerName}}">{{arrivalItemVM.corporateCustomerName}}</span>
+			<span *ngIf="!arrivalItemVM.corporateCustomerName || arrivalItemVM.corporateCustomerName.length <= 0" class="corporate-customer-name">{{ 'N/A' | translate }}</span>
 			<div class="room-type ellipsis-text " title="{{arrivalItemVM.roomCategoryLabel}}">{{arrivalItemVM.roomCategoryLabel}}</div>
 			<div class="booking-quick-details">
 				<div class="period clickable" (click)="openBookingModal()" >
@@ -74,6 +80,9 @@
 			<i *ngIf="arrivalItemVM.arrivalItemDO.bookingNotes" title="{{ arrivalItemVM.arrivalItemDO.bookingNotes }}" (click)="openBookingNotesModal()" class="clickable booking-notes-icon pull-right fa fa-sticky-note-o" ></i>
 		</div>
 		<div class="body">
+			<span class="f-12">{{ 'Agency' | translate }}:</span>
+			<span *ngIf="arrivalItemVM.corporateCustomerName && arrivalItemVM.corporateCustomerName.length > 0" class="corporate-customer-name ellipsis-text clickable" (click)="openCorporateCustomerModal()" title="{{arrivalItemVM.corporateCustomerName}}">{{arrivalItemVM.corporateCustomerName}}</span>
+			<span *ngIf="!arrivalItemVM.corporateCustomerName || arrivalItemVM.corporateCustomerName.length <= 0" class="corporate-customer-name">{{ 'N/A' | translate }}</span>
 			<div class="room-type ellipsis-text" title="{{arrivalItemVM.roomCategoryLabel}}">{{arrivalItemVM.roomCategoryLabel}}</div>
 			<div class="booking-quick-details">
 				<div class="period clickable" (click)="openBookingModal()" >
