#346 Added endpoint for reinstating invoices

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -10,7 +10,7 @@
 		<invoice-edit *ngFor="let displayedInvoiceIndex of displayedInvoiceIndexList" 
 			[invoiceUniqueId]="getInvoiceUniqueIdentifier(displayedInvoiceIndex)" 
 			(newlyAddedInvoiceRemoved)="newlyAddedInvoiceRemoved($event)"
-			(creditInvoiceAdded)="creditInvoiceAdded($event)">
+			(invoiceAdded)="invoiceAdded($event)">
 		</invoice-edit>
 
 	</div>
