#346 On reinstate generate credit & reinstatement

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -8,9 +8,11 @@
                 <small><i *ngIf="!isNewlyAdded">{{ invoiceReference }}</i></small>
                 <small *ngIf="isNewlyAdded"><i>{{ '(unsaved)' | translate }}</i></small>
                 <b *ngIf="isPaid"> {{ 'PAID' | translate }}</b>
-                <b *ngIf="isPaid && (isCredited || isCredit)"> - </b>
+                <b *ngIf="isPaid && (isReinstated || isReinstatement || isCredited || isCredit)"> - </b>
                 <b *ngIf="isCredited">{{ 'CREDITED' | translate }}</b>
+                <b *ngIf="isReinstated">{{ 'REINSTATED' | translate }}</b>
                 <b *ngIf="isCredit">{{ 'CREDIT' | translate }}</b>
+                <b *ngIf="isReinstatement">{{ 'REINSTATEMENT of ' | translate }} {{ reinstatedInvoiceReference }}</b>
                 <b *ngIf="isLossAcceptedByManagement"> {{ 'LOSS ACCEPTED BY MANAGEMENT' | translate }}</b>
             </span>
             <span class="pull-right clickable-item p-r-6" 
