--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/components/invoice-edit/template/invoice-edit.html
@@ -149,12 +149,7 @@
 
     <div *ngIf="!editMode" class="invoice-edit-footer">
         
-        <!--<button type="button" class="btn btn-danger" *ngIf="isPaid && !isCredited && !isCredit" (click)="onCreditInvoice()">
-            <i class="fa fa-2x unitpal-font">+</i> {{ 'Credit Invoice' | translate }}
-        </button>
-        -->
-
-        <button type="button" class="btn btn-danger" *ngIf="isPaid && !isCredited && !isCredit" (click)="onReinstateInvoice()">
+        <button type="button" class="btn btn-danger" *ngIf="isPaid && !isReinstated && !isCredited && !isCredit" (click)="onReinstateInvoice()">
             <i class="fa fa-2x unitpal-font">+</i> {{ 'Reinstate Invoice' | translate }}
         </button>
 
