#300 Included the unassign room button within the booking operations page

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/template/booking-operations-page.html
@@ -83,6 +83,9 @@
 		<div class="row">
 			<booking-undo-checkin [bookingOperationsPageData]="bookingOperationsPageData" (onBookingUndoCheckIn)="didChangeBooking($event) && loadPageData()"></booking-undo-checkin>
 		</div>
+		<div class="row">
+			<booking-unreserve-room [bookingOperationsPageData]="bookingOperationsPageData" (onBookingUnreserveRoom)="didChangeBooking($event) && loadPageData()"></booking-unreserve-room>
+		</div>
 		<div class="row padding-bottom-10px">
 			<booking-links [bookingOperationsPageData]="bookingOperationsPageData" (onInvoiceGenerated)="loadPageData()"></booking-links>
 		</div>
