Added room canvas refresh on check out from departures pane + pay only associated invoice of departure item

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/template/departures-pane.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/departures-pane/template/departures-pane.html
@@ -31,7 +31,7 @@
 		*ngFor="let departureItemVM of filteredDeparturesVMList"
 		[ngClass]="{'selected': isDepartureItemSelected(departureItemVM)}" 
 		[departureItemVM] = "departureItemVM" 
-		(refresh)="refresh($event)"
+		(onCheckOut)="refreshParent($event)"
 		(click) = "selectDepartureItem(departureItemVM)">
 	</departure-item>
 </div>
