--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -32,6 +32,7 @@
 	<script src="/node_modules/jquery.1/node_modules/jquery/dist/jquery.min.js"></script>
 	<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="/client/static-assets/third-party/jquery-ui/jquery-ui.min.js"></script>
+	<script src="/client/static-assets/third-party/jquery-ui/jquery.ui.touch-punch.min.js"></script>
 	<script src="/node_modules/echarts/dist/echarts.min.js"></script>
 
 	<!-- Angular JS Deps -->
