#376 Increased settings' sidemenu heights

--- a/assets/client/src/pages/internal/containers/home/pages/utils/header/subcomponents/settings/template/header-settings.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/header/subcomponents/settings/template/header-settings.html
@@ -1,7 +1,7 @@
 <a class="dropdown-toggle user-profile" data-toggle="dropdown" aria-expanded="false">
 	<span class="fa fa-gear fa-lg dropdown-trigger-button"></span>
 </a>
-<ul class="dropdown-menu animated fadeInDown pull-right">
+<ul class="dropdown-menu actions animated fadeInDown pull-right">
 	<li>
 		<a [routerLink]="['/settings']">
 									{{ 'Settings' | translate }}
