#248 Scroll while dragging the room arrival box

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/template/rooms-canvas.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/dashboard/components/rooms-canvas/template/rooms-canvas.html
@@ -22,8 +22,10 @@
 		</div>
 	</div>
 </div>
+<div class="rooms-canvas-upper"></div>
 <div customScroll class="body rooms-canvas">
 	<div *ngFor="let roomVM of filteredRoomVMList">
 		<room-card [roomVM]="roomVM" [roomCanvas]="self" (dropped)="dropHandled($event)"></room-card>
 	</div>
 </div>
+<div class="rooms-canvas-lower"></div>
