--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/housekeeping-report/template/settings-housekeeping-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/housekeeping-report/template/settings-housekeeping-report.html
@@ -6,6 +6,14 @@
 			</label>
 			<hr>
 			<div class="row">
+				<div class="col-xs-12 col-sm-6 form-group">
+					<label>{{ 'Group By' | translate }} </label>
+					<div class="input-group">
+						<select class="form-control" [ngModel]="selectedGroupByType" (ngModelChange)="selectedGroupByType=$event" name="selectedGroupByType">
+							<option *ngFor="let groupBy of getPossibleHousekeepingReportGroupByValues()" [value]="groupBy.type">{{groupBy.displayName}}</option>
+						</select>
+					</div>
+				</div>
 				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'File Format' | translate }}</label>
 					<report-output-format (onFormatSelected)="didSelectFormat($event)"></report-output-format>
