#383 Removed restrictedInterval property from booking history

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/components/bookings-date-filter/template/bookings-date-filter.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/booking-history/components/bookings-date-filter/template/bookings-date-filter.html
@@ -2,7 +2,7 @@
     [showExpandedView]="true" 
     [showLabels]="false"
     [initialThDateInterval]="searchInterval" 
-    [restrictedInterval]="true"
+    [restrictedInterval]="false"
     (didSelectThDateInterval)="didSelectSearchInterval($event)"
     >
 </th-date-interval-picker>
