--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/template/hotel-operations.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/template/hotel-operations.html
@@ -10,7 +10,7 @@
 				<small>{{ titleMeta.subtitle }}</small>
 				<small *ngIf="titleMeta.filterMeta && titleMeta.filterMeta.filterValue" class="filter">{{ titleMeta.filterMeta.filterInfo | translate}}</small>
 				<span *ngIf="titleMeta.filterMeta && titleMeta.filterMeta.filterValue" class="filter filter-label">
-					<i class="fa fa-2x unitpal-font">(</i> {{ titleMeta.filterMeta.filterValue }} 
+					<i class="fa fa-2x unitpal-font">{{ titleMeta.filterMeta.filterFontName }}</i> {{ titleMeta.filterMeta.filterValue }} 
 					<a class="clickable-item" (click)="removeHeaderFilter()">
 						<i class="fa unitpal-font">C</i>
 					</a>
