--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/payment-guarantee-edit/template/booking-payment-guarantee-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/payment-guarantee-edit/template/booking-payment-guarantee-editor.html
@@ -1,42 +1,72 @@
-<div class="col-xs-12 col-sm-1 padding-top-10px">
-    {{'Payment' | translate}}
-</div>
-<div class="col-xs-12 col-sm-4 padding-top-5px">
-    <div class="form-group">
-        <div class="form-control operational-input-group non-editable">
-            <span class="unitpal-font unitpal-large">L</span>
-            <span class="name" *ngIf="hasPaymentGuarantee">{{ "Guarantee added" | translate }}</span>
-            <span class="name" *ngIf="!hasPaymentGuarantee">{{ "No guarantee" | translate }}</span>
+<div class="col-xs-12">
+    <div class="row">
+        <div class="col-xs-12 col-sm-1 padding-top-10px">
+            <p>{{'Billed customer' | translate}}</p>
         </div>
-    </div>
-</div>
+        <div class="col-xs-12 col-sm-4 booking-details-table p-l-15 p-r-15">
+            <table *ngIf="!readonly" class="table form-group bottom-margin">
+                <tbody>
+                    <tr *ngFor="let customer of customerList" class="operational-box">
+                        <td width="10%"> <i class="fa unitpal-font f-20">(</i> </td>
+                        <td width="80%" class="clickable-item name-field" (click)="goToCustomer(customer)">
+                            {{ customer.customerName }}
+                        </td>
+                        <td width="10%"> <input type="radio" [checked]="isBilledCustomer(customer)" [value]="customer.id" (change)="onBilledCustomerSelectionChange(customer)"/> </td>
+                    </tr>
+                </tbody>
+            </table>
 
-<div class="col-xs-12 col-sm-4 padding-top-5px" *ngIf="readonly && hasPaymentGuarantee">
-    <div class="form-group">
-        <div class="form-control operational-input-group non-editable checkedin">
-            <i class="fa fa-lg padding-top-5px" [ngClass]="selectedPaymentMethodVM.iconUrl"></i> 
-            <span class="name">{{ selectedPaymentMethodVM.displayName | translate }}</span>
+            <table *ngIf="readonly" class="table form-group bottom-margin">
+                <tbody>
+                    <tr class="operational-box">
+                        <td width="10%"> <i class="fa unitpal-font f-20">(</i> </td>
+                        <td width="90%" class="clickable-item name-field" (click)="goToCustomer(billedCustomer)">
+                            {{ billedCustomer.customerName }}
+                        </td>
+
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
-</div>
-<div class="col-xs-12 col-sm-4 padding-top-5px" *ngIf="!readonly">
-    <div class="form-group">
-        <div class="input-group">
-            <select class="form-control" [ngModel]="selectedPaymentMethodVM" (ngModelChange)="selectedPaymentMethodVM=$event" name="selectedPaymentMethodVM">
+
+    <div class="row">
+
+        <div class="col-xs-12 col-sm-1 padding-top-10px">
+            {{'Payment' | translate}}
+        </div>
+        <div class="col-xs-12 col-sm-4 padding-top-5px">
+            <div class="form-group">
+                <div class="form-control operational-input-group non-editable">
+                    <span class="unitpal-font unitpal-large">L</span>
+                    <span class="name" *ngIf="hasPaymentGuarantee">{{ "Guarantee added" | translate }}</span>
+                    <span class="name" *ngIf="!hasPaymentGuarantee">{{ "No guarantee" | translate }}</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-4 padding-top-5px" *ngIf="readonly && hasPaymentGuarantee">
+            <div class="form-group">
+                <div class="form-control operational-input-group non-editable checkedin">
+                    <i class="fa fa-lg padding-top-5px" [ngClass]="selectedPaymentMethodVM.iconUrl"></i>
+                    <span class="name">{{ selectedPaymentMethodVM.displayName | translate }}</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4 padding-top-5px" *ngIf="!readonly">
+            <div class="form-group">
+                <div class="input-group">
+                    <select class="form-control" [ngModel]="selectedPaymentMethodVM" (ngModelChange)="selectedPaymentMethodVM=$event" name="selectedPaymentMethodVM">
                 <option *ngFor="let paymentMethodVM of paymentMethodVMList" [ngValue]="paymentMethodVM">{{paymentMethodVM.displayName | translate}}</option>
             </select>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-3 padding-top-10px" *ngIf="hasPaymentGuaranteeEditAccess">
+            <edit-save-button-group (onEditStart)="startEdit()" (onEditEnd)="endEdit()" (onSavePressed)="savePaymentGuarantee()" [isSaving]="isSaving"
+                [isEditing]="!readonly" [changeText]="buttonChangeText">
+            </edit-save-button-group>
         </div>
     </div>
-</div>
-
-<div class="col-xs-12 col-sm-3 padding-top-10px" *ngIf="hasPaymentGuaranteeEditAccess">
-    <edit-save-button-group
-        (onEditStart)="startEdit()"
-        (onEditEnd)="endEdit()"
-        (onSavePressed)="savePaymentGuarantee()"
-        [isSaving]="isSaving"
-        [isEditing]="!readonly"
-        [changeText]="buttonChangeText"
-        >
-    </edit-save-button-group>
 </div>
